--- a/modules/user/public/views/partials/passwords/new.liquid
+++ b/modules/user/public/views/partials/passwords/new.liquid
@@ -19,19 +19,18 @@ metadata:
     {% render 'modules/core/helpers/authenticity_token', context: context %}
 
     <fieldset>
-      <label for="pos-user-password">New password</label>
+      <label for="pos-user-password">{{ 'modules/user/passwords.new_password' | t }}</label>
       <input type="password" name="password[password]" id="pos-user-password" required placeholder="••••••••" {% render 'modules/common-styling/forms/error_input_handler', name: 'password', errors: errors['password'] %}>
       {% render 'modules/common-styling/forms/error_list', name: 'password', errors: errors['password'] %}
     </fieldset>
-<script>
-console.log({{errors}})</script>
+
     <fieldset>
-      <label for="pos-user-password">Confirm new password</label>
+      <label for="pos-user-password">{{ 'modules/user/passwords.confirm_new_password' | t }}</label>
       <input type="password" name="password[password_confirmation]" id="pos-user-password_confirmation" required placeholder="••••••••" {% render 'modules/common-styling/forms/error_input_handler', name: 'password_confirmation', errors: errors['password_confirmation'] %}>
       {% render 'modules/common-styling/forms/error_list', name: 'password_confirmation', errors: errors['password_confirmation'] %}
     </fieldset>
 
-    <button type="submit" class="pos-button pos-button-primary">Update password</button>
+    <button type="submit" class="pos-button pos-button-primary">{{ 'modules/user/passwords.password_update' | t }}</button>
 
   </form>
 
