Apply suggestions from code review
Co-authored-by: Maciej Krajowski-Kukiel <krajek6@gmail.com>

--- a/modules/user/public/views/partials/passwords/reset.liquid
+++ b/modules/user/public/views/partials/passwords/reset.liquid
@@ -18,7 +18,7 @@ metadata:
 
   <form action="/authentication_links" method="POST" class="pos-form pos-form-simple">
 
-    {% render 'modules/core/helpers/authenticity_token', context: context %}
+    <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
 
     <fieldset>
       <label for="pos-user-email">{{ 'modules/user/passwords.email' | t }}</label>
