--- a/modules/user/public/views/partials/users/new.liquid
+++ b/modules/user/public/views/partials/users/new.liquid
@@ -16,7 +16,7 @@ metadata:
   <h1 class="pos-heading-2">{{ 'modules/user/users.new.create_account' | t }}</h1>
 
   <form action="/users" method="POST" class="pos-form pos-form-simple">
-    {% render 'modules/core/helpers/authenticity_token', context: context %}
+    <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
 
     <fieldset>
       <label for="pos-user-email">Email</label>
