--- a/modules/user/public/views/partials/components/pages/403.liquid
+++ b/modules/user/public/views/partials/components/pages/403.liquid
@@ -1,6 +1,4 @@
-<section class="container mt-24 flex flex-1 max-w-2xl flex-col justify-center">
-  <header class="mb-8 pb-8 text-center">
-    <h1 class="mb-6 font-bold text-5xl">403 Forbidden</h1>
-    <h3 class=" font-bold text-2xl">You don't have access to this page</h3>
-  </header>
-</section>
+<main class="pos-user-content">
+  <h1 class="pos-heading-2">403 Forbidden</h1>
+  <h3 class="pos-heading-3">You don't have access to this page</h3>
+</main>
