--- a/app/views/layouts/application.liquid
+++ b/app/views/layouts/application.liquid
@@ -1,15 +1,47 @@
-<html>
+<!DOCTYPE html>
+<html class="pos-app">
+  <head>
+
+    <meta charset="utf-8">
+      {% comment %} default platformOS provided styles {% endcomment %}
+      <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-reset.css' | asset_url }}">
+      <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-config.css' | asset_url }}">
+      <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-button.css' | asset_url }}">
+      <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-typography.css' | asset_url }}">
+      <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-toast.css' | asset_url }}">
+      <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-avatar.css' | asset_url }}">
+      <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-forms.css' | asset_url }}">
+      <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-page.css' | asset_url }}">
+      <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-card.css' | asset_url }}">
+      <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-tag.css' | asset_url }}">
+      <link rel="stylesheet" href="{{ 'modules/user/style/pos-user-form.css' | asset_url }}">
+      {% comment %} custom styles specific for this app, some overwrite the defaults {% endcomment %}
+      <link rel="stylesheet" href="{{ 'style/app.css' | asset_url }}">
+
+      <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes">
+
+      <script>
+        /* namespace */
+        if(typeof window.pos !== 'object'){
+          window.pos = {};
+          window.pos.modules = {};
+          window.pos.translations = {};
+        }
+      </script>
+
+  </head>
   <body>
+
+    {{ content_for_layout }}
+
     {% liquid
       function flash = 'modules/core/commands/session/get', key: 'sflash', clear: null
       if context.location.pathname != flash.from or flash.force_clear
         function _ = 'modules/core/commands/session/clear', key: 'sflash'
       endif
+
+      render 'modules/common-styling/toasts', params: flash
     %}
-    {% if flash %}
-      flash: {{ flash.message }}
-      <hr/>
-    {% endif %}
-    {{ content_for_layout }}
+
   </body>
 </html>
