Updated oauth for users 4.0.0

--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -10,6 +10,7 @@
       <nav class="app-user-navigation">
         <a href="/subscription">Subscription area</a>
         <a href="/admin">Admin</a>
+        <a href="/oauth">OAuth 2</a>
       </nav>
 
       <section class="app-user-info pos-card pos-card-highlighted">
