--- a/modules/user/public/views/partials/oauth/index.liquid
+++ b/modules/user/public/views/partials/oauth/index.liquid
@@ -1,36 +1,104 @@
-OAuth management. <a href="/">Back</a><br/>
-
 {% liquid
-  function available_providers = 'modules/user/helpers/get_available_oauth_providers'
-  function assigned_providers = 'modules/user/helpers/get_assigned_oauth_providers'
+  function current_user = 'modules/user/queries/user/current'
 %}
 
-<div>OAuth providers:</div>
-{% for provider in available_providers %}
-  {% if assigned_providers contains provider[0] %}
-    {{ provider[1].name }} - in use
-    <form action="/oauth/{{ provider[0] }}/unassign" method="post">
-      <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
-      <input type="hidden" name="_method" value="delete" />
-      <button type="submit">
-        {{ 'modules/user/oauth.app.unassign_provider' | t }}
-      </button>
-    </form>
-  {% else %}
-    <form action="/oauth/{{ provider[0] }}/start" method="post">
-      <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
-      <input type="hidden" name="_method" value="post" />
-      <button type="submit">
-        {{ provider[1].name }}
-      </button>
-    </form>
-  {% endif %}
-{% endfor %}
+{% if current_user.id %}
 
-<form action="/sessions" method="post">
-  <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
-  <input type="hidden" name="_method" value="delete" />
-  <button type="submit">
-    {{ "modules/user/users.logout" | t }}
-  </button>
-</form>
+  {% if context.session.original_user_id == blank %}
+    <main class="app-user-page">
+
+      <nav class="app-user-navigation">
+        <a href="/">Home</a>
+        <a href="/subscription">Subscription area</a>
+        <a href="/admin">Admin</a>
+        <a href="/oauth">OAuth 2</a>
+      </nav>
+
+      <section class="pos-card pos-card-highlighted">
+        <header>
+          <h1 class="pos-heading-3">OAuth 2</h1>
+        </header>
+
+        {% liquid
+          function available_providers = 'modules/user/helpers/get_available_oauth_providers'
+          function assigned_providers = 'modules/user/helpers/get_assigned_oauth_providers'
+        %}
+        
+        <section class="pos-social-listing">
+          {% for provider in available_providers %}
+            {% if assigned_providers contains provider[0] %}
+              <form class="pos-form-simple" action="/oauth/{{ provider[0] }}/unassign" method="post">
+                <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
+                <input type="hidden" name="_method" value="delete" />
+                <button type="submit" class="pos-button pos-button-primary pos-button-social">
+                  {% liquid
+                    assign icon = "modules/oauth_" | append: provider[1].key | append: "/img/icon.svg"
+                    assign text = "modules/oauth_" | append: provider[1].key | append: "/module.button.disconnect"
+                  %}
+                  <span class="pos-button-social">
+                    <span class="pos-button-social-icon"><img loading="eager" width="32" height="32" src="{{ icon | asset_url }}" /></span>
+                    <span class="pos-button-social-text">{{ text | t }}</span>
+                  </span>
+                </button>
+              </form>
+            {% else %}
+              <form class="pos-form-simple" action="/oauth/{{ provider[0] }}/start" method="post">
+                <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
+                <input type="hidden" name="_method" value="post" />
+                <button type="submit" class="pos-button pos-button-primary pos-button-social">
+                  {% liquid
+                    assign icon = "modules/oauth_" | append: provider[1].key | append: "/img/icon.svg"
+                    assign text = "modules/oauth_" | append: provider[1].key | append: "/module.button.continue"
+                  %}
+                  <span class="pos-button-social">
+                    <span class="pos-button-social-icon"><img loading="eager" width="32" height="32" src="{{ icon | asset_url }}" /></span>
+                    <span class="pos-button-social-text">{{ text | t }}</span>
+                  </span>
+                </button>
+              </form>
+            {% endif %}
+          {% endfor %}
+        </section>
+
+      </section>
+    </main>
+
+  {% else %}
+    <main class="app-user-page">
+      impersonating: {{ current_user }} (original user id: {{ context.session.original_user_id }})
+      <form action="/sessions/impersonations" method="post">
+        <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
+        <input type="hidden" name="_method" value="delete">
+        <input type="hidden" name="redirect_to" value="/admin">
+        <button type="submit" class="pos-button">
+          Log back in as original user
+        </button>
+      </form>
+    </main>
+
+  {% endif %}
+
+{% else %}
+
+  <main class="app-user-intro">
+
+    <section class="app-user-intro-content">
+      <h2 class="pos-heading-2">
+        <img src="{{ 'images/pos-sign.svg' | asset_url }}" width="28" height="25" loading="eager" alt="">
+        Example platformOS user management application
+      </h2>
+      <nav>
+        <ul class="app-user-intro-nav">
+          <li><a href="/users/new">Register</a></li>
+          <li><a href="/sessions/new">Log in</a></li>
+        </ul>
+      </nav>
+    </section>
+
+    <footer class="app-user-intro-footer">
+      Powered by <a href="https://platformos.com">platformOS</a>
+    </footer>
+  
+  </main>
+
+{% endif %}
