--- a/modules/user/public/views/partials/users/new.liquid
+++ b/modules/user/public/views/partials/users/new.liquid
@@ -43,5 +43,7 @@ metadata:
   </form>
 
   <span class="pos-supplementary">{{ 'modules/user/users.new.already_have_account' | t }}</span>
+  
+  {% render 'modules/user/oauth/providers' %}
 
 </section>
