--- a/modules/oauth_github/public/lib/commands/get_user_email.liquid
+++ b/modules/oauth_github/public/lib/commands/get_user_email.liquid
@@ -7,5 +7,9 @@
     graphql r  = 'modules/oauth_github/get_user_email', headers: object
     assign result = r.api_call_send.response.body | parse_json
     return result
+  else
+    log object.errors, type: "ERROR"
   endif
+
+  return null
 %}
