--- a/modules/oauth_github/public/lib/commands/get_user_info.liquid
+++ b/modules/oauth_github/public/lib/commands/get_user_info.liquid
@@ -3,8 +3,14 @@
   function object = 'modules/oauth_github/commands/get_user_info/build', object: bearer
   function object = 'modules/oauth_github/commands/get_user_info/check', object: object
 
-  graphql r  = 'modules/oauth_github/get_user_info', headers: headers
-  assign result = r.api_call_send.response.body | parse_json
-  return result
+  if object.valid
+    graphql r  = 'modules/oauth_github/get_user_info', headers: object
+    assign result = r.api_call_send.response.body | parse_json
+    return result
+  else
+    log object.errors, type: "ERROR"
+  endif
+
+  return null
 %}
   
