Profile module path changed to user

--- a/modules/user/public/lib/helpers/table_name.liquid
+++ b/modules/user/public/lib/helpers/table_name.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  function profile_module = 'modules/core/queries/variable/get', name: 'PROFILE_MODULE', default: 'modules/profile', type: null
+  function profile_module = 'modules/core/queries/variable/get', name: 'PROFILE_MODULE', default: 'modules/user', type: null
 
   return profile_module | append: '/profile'
 %}
