--- a/modules/user/public/lib/queries/profiles/filters_proxy.liquid
+++ b/modules/user/public/lib/queries/profiles/filters_proxy.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  function profile_module = 'modules/core/queries/variable/get', name: 'PROFILE_MODULE', default: 'modules/profile', type: null
+  function profile_module = 'modules/core/queries/variable/get', name: 'PROFILE_MODULE', default: 'modules/user', type: null
   assign function_name = profile_module | append: '/queries/profiles/filters'
   function filters = function_name, params: params
 
