--- a/modules/user/public/lib/commands/user/create.liquid
+++ b/modules/user/public/lib/commands/user/create.liquid
@@ -1,20 +1,28 @@
 {% comment %}
   Creates a user.
   Params:
+    - first_name: string
+      user's first name
+    - last_name: string
+      user's last name
     - email: string
       user's email address
     - password: string
       user's password
-    - roles: Array[string]
-      user's initial roles
 {% endcomment %}
 {% liquid
-  function object = 'modules/user/commands/user/create/build', email: email, password: password, hook_params: hook_params, roles: roles
+  function object = 'modules/user/commands/user/create/build', first_name: first_name, last_name: last_name, email: email, password: password, hook_params: hook_params
   function object = 'modules/user/commands/user/create/check', object: object
+  log object, type:"D"
   if object.valid
-    function object = 'modules/core/commands/execute', mutation_name: 'modules/user/user/create', object: object, selection: 'user'
-    assign event_payload = null | hash_merge: user_id: object.id
+    function user = 'modules/core/commands/execute', mutation_name: 'modules/user/user/create', object: object, selection: 'user'
+    hash_assign object['user_id'] = user.id
+    function profile = 'modules/user/commands/profiles/create', object: object
+
+    assign event_payload = null | hash_merge: user_id: user.id
     function _ = 'modules/core/commands/events/publish', type: 'user_created', object: event_payload, delay: null, max_attempts: null
+
+    return user
   endif
 
   return object
