--- a/modules/user/public/lib/helpers/can_do_or_unauthorized.liquid
+++ b/modules/user/public/lib/helpers/can_do_or_unauthorized.liquid
@@ -3,7 +3,7 @@
 
   Params:
     - requester Object
-      The requester must has a string array field called 'permissions'
+      The requester must have a string array field called 'permissions'
     - entity Object
     - do String
     - redirect_anonymous_to_login Boolean
