--- a/modules/user/public/lib/queries/profiles/search.liquid
+++ b/modules/user/public/lib/queries/profiles/search.liquid
@@ -11,7 +11,7 @@
   for profile in records.results
     function slug = 'modules/user/helpers/profiles/slugs/build' , current_profile: profile
     hash_assign profile['properties']['slug'] = slug
-    assign p = profile | hash_merge: profile.properties
+    assign p = profile
 
     assign profiles = profiles | array_add: p
   endfor
