--- a/app/modules/user/public/lib/queries/role_permissions/permissions.liquid
+++ b/app/modules/user/public/lib/queries/role_permissions/permissions.liquid
@@ -3,9 +3,9 @@
   {% if context.constants.USER_DEFAULT_ROLE != blank %}
   "{{ context.constants.USER_DEFAULT_ROLE }}": [],
   {% endif %}
-  "admin": ["admin_pages.view", "admin.users.manage"],
-  "anonymous": ["sessions.create", "users.register"],
-  "authenticated": ["sessions.destroy", "oauth.manage"]
+  "admin": ["admin_pages.view", "admin.users.manage", "users.impersonate"],
+  "authenticated": ["sessions.destroy", "oauth.manage", "profile.manage"],
+  "superadmin": ["users.impersonate_superadmin"]
 }
 {% endparse_json %}
 
