--- a/modules/user/public/lib/commands/profiles/create/build.liquid
+++ b/modules/user/public/lib/commands/profiles/create/build.liquid
@@ -6,5 +6,24 @@
 
   assign data = null | hash_merge: first_name: object.first_name, last_name: object.last_name, user_id: object.user_id, email: object.email, uuid: uuid, name: name, c__names: tokenized_names
 
+  if roles == null
+    assign roles = '[]' | parse_json
+    if context.constants.USER_DEFAULT_ROLE != blank
+      assign roles = roles | array_add: context.constants.USER_DEFAULT_ROLE
+    endif
+  else
+    assign roles_type = roles | type_of
+    if roles_type == 'String'
+      assign roles = roles | append: '' | split: ','
+    elsif roles_type == 'Array'
+    else
+      # accepts only String and Array
+      log roles, type: 'ERROR: roles must be an array or a coma separated string'
+      assign roles = null
+    endif
+  endif
+
+  hash_assign data['roles'] = roles
+
   return data
 %}
