--- a/modules/user/public/lib/commands/session/destroy.liquid
+++ b/modules/user/public/lib/commands/session/destroy.liquid
@@ -2,9 +2,11 @@
   Destroys the current user's session.
 {% endcomment %}
 {% liquid
-  function user = 'modules/user/queries/user/current'
+  function current_profile = 'modules/user/helpers/current_profile'
+
   graphql destroy = 'modules/user/session/destroy'
-  hash_assign destroy['user'] = user
+  hash_assign destroy['user'] = current_profile.user
+  log destroy, type: "D"
 
   unless destroy.errors
     assign params = '{}' | parse_json | hash_merge: destroy: destroy
@@ -15,6 +17,5 @@
     session original_user_id = null
     session return_to = null
   endunless
-
   return destroy
 %}
