--- a/modules/user/public/lib/commands/user/create/build.liquid
+++ b/modules/user/public/lib/commands/user/create/build.liquid
@@ -1,24 +1,7 @@
-{% liquid
-  if roles == null
-    assign roles = '[]' | parse_json
-    if context.constants.USER_DEFAULT_ROLE != blank
-      assign roles = roles | array_add: context.constants.USER_DEFAULT_ROLE
-    endif
-  else
-    assign roles_type = roles | type_of
-    if roles_type == 'String'
-      assign roles = roles | append: '' | split: ','
-    elsif roles_type == 'Array'
-    else
-      # accepts only String and Array
-      log roles, type: 'ERROR: roles must be an array or a coma separated string'
-      assign roles = null
-    endif
-  endif
-%}
-
 {% parse_json object %}
   {
+    "first_name": {{ first_name | json }},
+    "last_name": {{ last_name | json }},
     "email": {{ email | json }},
     "password": {{ password | json }},
     "hook_params": {{ hook_params | json }}
