--- a/modules/user/public/lib/commands/user/create/check.liquid
+++ b/modules/user/public/lib/commands/user/create/check.liquid
@@ -1,6 +1,7 @@
 {% liquid
   assign c = '{ "errors": {}, "valid": true }' | parse_json
-
+  function c = 'modules/core/validations/presence', c: c, object: object, field_name: 'first_name'
+  function c = 'modules/core/validations/presence', c: c, object: object, field_name: 'last_name'
   function c = 'modules/core/validations/presence', c: c, object: object, field_name: 'password'
   function c = 'modules/core/validations/password_complexity', c: c, object: object, field_name: 'password', key: null
   function c = 'modules/core/validations/presence', c: c, object: object, field_name: 'email', key: 'modules/user/validation.email.required'
