--- a/modules/user/public/lib/helpers/current_profile.liquid
+++ b/modules/user/public/lib/helpers/current_profile.liquid
@@ -1,10 +1,11 @@
 {% liquid
   function user = 'modules/user/queries/user/current'
-  if user.id
-    function current_profile = 'modules/user/queries/profiles/find', user_id: user.id, id: null, uuid: null, first_name: null, last_name: null
+  if user.id == null
+    return null
   endif
-
-  assign current_profile = current_profile | hash_merge: roles: user.roles, permissions: user.permissions, user: user
+  
+  function current_profile = 'modules/user/queries/profiles/find', user_id: user.id, id: null, uuid: null, first_name: null, last_name: null
+  assign current_profile = current_profile | hash_merge: user: user
 
   export current_profile
   return current_profile
