--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -8,14 +8,15 @@
     <main class="app-user-page">
 
       <nav class="app-user-navigation">
+        <a href="/">Home</a>
+        <a href="/profile">Profile</a>
         <a href="/subscription">Subscription area</a>
         <a href="/admin">Admin</a>
-        <a href="/oauth">OAuth 2</a>
       </nav>
 
       <section class="app-user-info pos-card pos-card-highlighted">
         <header>
-          <h1 class="pos-heading-3">Current user</h1>
+          <h1 class="pos-heading-3">Current profile</h1>
           <form action="/sessions" method="post">
             <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
             <input type="hidden" name="_method" value="delete">
