--- a/modules/common-styling/public/views/partials/toasts.liquid
+++ b/modules/common-styling/public/views/partials/toasts.liquid
@@ -25,6 +25,7 @@
 
   {% if message %}
     <script>
+      console.log()
       document.addEventListener('pos-modules-toast-ready', () => {
         new window.pos.modules.toast('{{ severity }}', {% print message | markdown | json %}, { delay: {{ delay | json }} {% if severity == 'success' and autohide != null %}, autohide: {{ autohide }} {% endif %} });
       });
