--- a/modules/user/public/views/partials/users/new.liquid
+++ b/modules/user/public/views/partials/users/new.liquid
@@ -20,29 +20,13 @@ metadata:
     <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
     {% for field in registration_fields %}
       <fieldset>
-        <label for="pos-user-{{ field.name }}">{{ field.label }}</label>
-        <input type="{{ field.type }}" name="{{ field.name }}" id="pos-user-{{ field.name }}" value="{{ values[field.name] }}" required placeholder="{{ field.label | downcase }}"{% render 'modules/common-styling/forms/error_input_handler', name: '{{field.name}}', errors: errors[field.name] %}>
+        {% if field.label %}
+          <label for="pos-user-{{ field.name }}">{{ field.label }}</label>
+        {% endif %}
+        <input type="{{ field.type }}" name="{{ field.name }}" id="pos-user-{{ field.name }}" value="{{ values[field.name] }}" required placeholder="{{ field.placeholder }}"{% render 'modules/common-styling/forms/error_input_handler', name: field.name, errors: errors[field.name] %}>
         {% render 'modules/common-styling/forms/error_list', name: 'email', errors: errors['email'] %}
       </fieldset>
     {% endfor %}
-
-    <fieldset>
-      <label for="pos-user-email">Email</label>
-      <input type="email" name="email" id="pos-user-email" value="{{ values.email }}" required placeholder="my@email.com" {% render 'modules/common-styling/forms/error_input_handler', name: 'email', errors: errors['email'] %}>
-      {% render 'modules/common-styling/forms/error_list', name: 'email', errors: errors['email'] %}
-    </fieldset>
-
-    <fieldset>
-      <label for="pos-user-password">Password</label>
-      <input type="password" name="password" id="pos-user-password" required placeholder="••••••••" {% render 'modules/common-styling/forms/error_input_handler', name: 'password', errors: errors['password'] %}>
-      {% if errors['email'] %}
-        <ul id="pos-user-password-error">
-          {% for error in errors['password'] %}
-            <li class="pos-form-error">{{ error }}</li>
-          {% endfor %}
-        </ul>
-      {% endif %}
-    </fieldset>
 
     {% render 'modules/common-styling/forms/hcaptcha' %}
 
