Updated login label to 'log in'

--- a/modules/user/public/views/partials/passwords/reset.liquid
+++ b/modules/user/public/views/partials/passwords/reset.liquid
@@ -32,6 +32,6 @@ metadata:
 
   </form>
 
-  <span class="pos-supplementary">{{ 'modules/user/passwords.remembered_password' | t }} <a href="/sessions/new">{{ 'modules/user/sessions.new.login' | t }}</a></span>
+  <span class="pos-supplementary">{{ 'modules/user/passwords.remembered_password' | t }} <a href="/sessions/new">{{ 'modules/user/sessions.new.log_in' | t }}</a></span>
 
 </section>
