--- a/app/lib/test/commands/user/roles/remove_test.liquid
+++ b/app/lib/test/commands/user/roles/remove_test.liquid
@@ -7,5 +7,5 @@
   function result = 'modules/user/commands/profiles/roles/remove', id: profile.id, role: 'role 2'
 
   assign roles = 'role 1,role 3' | split: ','
-  function contract = 'modules/tests/assertions/equal', contract: contract, given: result.roles, expected: roles, field_name: null
+  function contract = 'modules/tests/assertions/equal', contract: contract, given: result.properties.roles, expected: roles, field_name: null
 %}
