update migration | update profile instead of user to set superadmin role

--- a/tests/post_import/app/migrations/20241202183257_set_superadmin_role.liquid
+++ b/tests/post_import/app/migrations/20241202183257_set_superadmin_role.liquid
@@ -2,17 +2,22 @@
 
 {% if context.environment == "staging" %}
   {% graphql r, userId: 1, roles: roles %}
-    mutation setAdminUser($roles: [String], $userId: ID) {
-      user_update(
+    mutation setAdminUser($userId: ID!, $roles: [String]) {
+      record: record_update(
         id: $userId
-          user: { properties: { name: "roles", value_array: $roles }}
+        record: {
+          table: "modules/user/profile"
+          properties: [
+            { name: "roles", value_array: $roles }
+          ]
+        }
       ) {
         id
-        email
-        deleted_at
-        properties
+        roles: property_array(name: "roles")
       }
-    }
+    }  
   {% endgraphql %}
   {% log r, type: 'migrations/set_superadmin_role'  %}
 {% endif %}
+
+
