--- a/modules/user/public/lib/commands/session/destroy.liquid
+++ b/modules/user/public/lib/commands/session/destroy.liquid
@@ -11,7 +11,7 @@
     assign params = '{}' | parse_json | hash_merge: destroy: destroy
     function results = 'modules/core/commands/hook/fire', hook: 'user_logout', params: params, merge_to_object: null
     hash_assign destroy['hook_results'] = results
-    assign event_payload = null | hash_merge: user_id: user.id
+    assign event_payload = null | hash_merge: user_id: current_profile.user.id
     function _ = 'modules/core/commands/events/publish', type: 'user_logout', object: event_payload, delay: null, max_attempts: null
     session original_user_id = null
     session return_to = null
