--- a/modules/user/public/views/pages/users/new.liquid
+++ b/modules/user/public/views/pages/users/new.liquid
@@ -1,7 +1,7 @@
 {% liquid
   function current_profile = 'modules/user/helpers/current_profile'
   
-  if current_profile != null
+  if current_profile.user != null
     include 'modules/core/helpers/redirect_to'
   endif
 
